Parse nested object (#103)
* Adopt runbook.md parser into treecreeper

* rename from bizops/runbook to treecreeper

* rename from bizops/runbook to treecreeper

* implement dealing with html comments

* Update packages/tc-markdown-parser/__tests__/first-paragraph.spec.js

Co-Authored-By: Rhys Evans <rhys.evans@ft.com>

* add configured parameter test and fix problems

* remove whitelist setting

* add empty document property spec

* remove blacklist shared library

* tidy up argument name

* remove schema argument and use singleton one internally

* WIP parse nested object

* WIP test specs

* implement mutiplie parser and pass tests

* implement mutiplie parser and pass tests

* tidy up comment

* Update packages/tc-markdown-parser/lib/property-coercers/index.js

Co-Authored-By: Rhys Evans <rhys.evans@ft.com>

* Update packages/tc-markdown-parser/lib/parse-multiline-definition.js

Co-Authored-By: Jake Champion <jakechampion.jake2@googlemail.com>

* Update packages/tc-markdown-parser/lib/parse-multiline-definition.js

Co-Authored-By: Jake Champion <jakechampion.jake2@googlemail.com>

* WIP nested type testings

* pass all nested cases

* remove hasMany coercer for string (non-nested)

* allow properties field in relationship

* validate only one desription can be defined

* remove skip tests

* remove unnecessary comments

* remove unnecessary comments

--- a/example-schema/types/MainType.yaml
+++ b/example-schema/types/MainType.yaml
@@ -97,3 +97,21 @@ properties:
     label: Older siblings label
     direction: incoming
     hasMany: true
+  culiousChild:
+    relationship: CULIOUS_CHILD
+    type: ChildType
+    description: Culious child description.
+    label: Culious child label
+    direction: outgoing
+    hasMany: false
+    properties:
+      someString:
+        type: Word
+      someInteger:
+        type: Int
+      someEnum:
+        type: AnEnum
+      someBoolean:
+        type: Boolean
+      someFloat:
+        type: Float
