--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@financial-times/tc-schema-sdk": "file:packages/tc-schema-sdk",
     "@financial-times/tc-ui": "file:packages/tc-ui",
     "autolinker": "^3.11.1",
-    "aws-sdk": "^2.504.0",
     "body-parser": "^1.19.0",
     "date-fns": "^2.8.1",
     "express": "^4.17.1",
@@ -40,9 +39,13 @@
     "babel-plugin-module-resolver": "^3.2.0",
     "concurrently": "^5.0.0",
     "css-loader": "^3.2.1",
-    "fetch-mock": "^7.3.9",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-preact-pure": "^2.2.0",
+    "fetch-mock": "^8.0.0",
+    "isomorphic-fetch": "^2.2.1",
     "jest": "^24.8.0",
     "jest-junit": "^7.0.0",
+    "jsdom": "^15.2.1",
     "lolex": "^4.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "nodemon": "^1.19.1",
