--- a/example-schema/types/MainType.yaml
+++ b/example-schema/types/MainType.yaml
@@ -97,11 +97,11 @@ properties:
     label: Older siblings label
     direction: incoming
     hasMany: true
-  culiousChild:
-    relationship: CULIOUS_CHILD
+  curiousChild:
+    relationship: CURIOUS_CHILD
     type: ChildType
-    description: Culious child description.
-    label: Culious child label
+    description: Curious child description.
+    label: Curious child label
     direction: outgoing
     hasMany: false
     properties:
