--- a/example-schema/types/ChildType.yaml
+++ b/example-schema/types/ChildType.yaml
@@ -25,20 +25,6 @@ properties:
     label: Is favourite child of label
     direction: incoming
   isCuriousChildOf:
-    relationship: CURIOUS_CHILD
-    type: MainType
-    description: Is curious child description.
-    label: Is curious child label
-    direction: incoming
-    hasMany: true
-    properties:
-      someString:
-        type: Word
-      someInteger:
-        type: Int
-      someEnum:
-        type: AnEnum
-      someBoolean:
-        type: Boolean
-      someFloat:
-        type: Float
+    type: CuriousChild
+    description: Curious child of description.
+    label: Curious child of label
