Add anotherString property in CuriousChild.yaml

--- a/example-schema/relationships/CuriousChild.yaml
+++ b/example-schema/relationships/CuriousChild.yaml
@@ -11,6 +11,10 @@ properties:
     label: Label for some string
     description: Description for some string.
     type: Word
+  anotherString:
+    label: Label for another string
+    description: Description for another string.
+    type: Word
   someInteger:
     label: Label for some integer
     description: Description for some integer.
