--- a/packages/tc-ui/package.json
+++ b/packages/tc-ui/package.json
@@ -2,9 +2,11 @@
 	"dependencies": {
 		"@financial-times/tc-schema-sdk": "file:../tc-schema-sdk",
 		"autolinker": "^3.11.1",
+		"date-fns": "^2.8.1",
 		"preact": "^10.0.5",
 		"react-autosuggest": "^9.4.3",
-		"react-highlight-words": "^0.16.0"
+		"react-highlight-words": "^0.16.0",
+		"showdown": "^1.9.1"
 	},
 	"devDependencies": {
 		"fetch-mock": "^8.0.0",
