--- a/packages/tc-ui/package.json
+++ b/packages/tc-ui/package.json
@@ -6,6 +6,7 @@
 		"http-errors": "^1.7.3",
 		"node-fetch": "^2.6.0",
 		"preact": "^10.0.5",
+		"preact-render-to-string": "^5.1.2",
 		"react-autosuggest": "^9.4.3",
 		"react-highlight-words": "^0.16.0",
 		"showdown": "^1.9.1"
