--- a/package.json
+++ b/package.json
@@ -11,19 +11,14 @@
     "@financial-times/tc-schema-publisher": "file:./packages/tc-schema-publisher",
     "@financial-times/tc-schema-sdk": "file:packages/tc-schema-sdk",
     "@financial-times/tc-ui": "file:packages/tc-ui",
-    "autolinker": "^3.11.1",
     "body-parser": "^1.19.0",
-    "date-fns": "^2.8.1",
     "express": "^4.17.1",
     "graphql-playground-middleware-express": "^1.7.12",
     "http-errors": "^1.7.3",
     "module-alias": "^2.2.2",
     "neo4j-driver": "^1.7.6",
     "node-fetch": "^2.6.0",
-    "preact": "^10.0.5",
-    "preact-render-to-string": "^5.1.2",
-    "qs": "^6.9.1",
-    "showdown": "^1.9.1"
+    "preact": "^10.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
