--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "module-alias": "^2.2.2",
     "neo4j-driver": "^1.7.6",
     "node-fetch": "^2.6.0",
-    "preact": "^10.1.1"
+    "preact": "^10.1.1",
+    "preact-compat": "^3.19.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
