--- a/packages/tc-ui/package.json
+++ b/packages/tc-ui/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "@financial-times/tc-ui",
+  "version": "0.0.0",
+  "description": "A CMS-like UI for treecreeper",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Financial-Times/treecreeper.git"
+  },
 	"dependencies": {
 		"@financial-times/tc-schema-sdk": "file:../tc-schema-sdk",
 		"autolinker": "^3.11.1",
@@ -11,7 +19,8 @@
 		"react-highlight-words": "^0.16.0",
 		"showdown": "^1.9.1"
 	},
-	"main": "server.js",
+	"main": "src/server.js",
+	"browser": "src/browser.js",
 	"devDependencies": {
 		"fetch-mock": "^8.0.0",
 		"isomorphic-fetch": "^2.2.1"
