correct name in package.json

--- a/packages/tc-ui/package.json
+++ b/packages/tc-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@financial-times/tc-schema-sdk",
+  "name": "@financial-times/tc-ui",
   "version": "0.0.0",
   "description": "A CMS-like UI for treecreeper",
   "license": "ISC",
