--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "lolex": "^4.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "nodemon": "^1.19.1",
+    "raw-loader": "^4.0.0",
     "stylelint": "^12.0.0",
     "stylelint-config-recommended-scss": "^4.1.0",
     "stylelint-scss": "^3.13.0",
@@ -53,7 +54,9 @@
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
     "webpack-encoding-plugin": "^0.3.1",
-    "webpack-manifest-plugin": "^2.2.0"
+    "webpack-manifest-plugin": "^2.2.0",
+    "webpack-merge": "^4.2.2",
+    "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
     "test": "make test",
