--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "graphql-playground-middleware-express": "^1.7.12",
     "http-errors": "^1.7.3",
     "module-alias": "^2.2.2",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "neo4j-driver": "^1.7.6",
-    "node-fetch": "^2.6.0",
-    "preact": "^10.1.1",
-    "preact-compat": "^3.19.0"
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
@@ -36,7 +36,7 @@
     "concurrently": "^5.0.0",
     "css-loader": "^3.2.1",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-preact-pure": "^2.2.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "fetch-mock": "^8.0.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^24.8.0",
@@ -45,6 +45,7 @@
     "lolex": "^4.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "nodemon": "^1.19.1",
+
     "stylelint": "^12.0.0",
     "stylelint-config-recommended-scss": "^4.1.0",
     "stylelint-scss": "^3.13.0",
