--- a/packages/tc-ui/package.json
+++ b/packages/tc-ui/package.json
@@ -13,8 +13,8 @@
 		"date-fns": "^2.8.1",
 		"http-errors": "^1.7.3",
 		"node-fetch": "^2.6.0",
-		"preact": "^10.0.5",
-		"preact-render-to-string": "^5.1.2",
+		"react": "^16.0.0",
+		"react-dom": "^16.0.0",
 		"react-autosuggest": "^9.4.3",
 		"react-highlight-words": "^0.16.0",
 		"showdown": "^1.9.1"
