--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "css-loader": "^3.2.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-preact-pure": "^2.2.0",
-    "fetch-mock": "^8.0.0",
+    "fetch-mock": "^8.2.1",
+    "fetch-mock-jest": "^0.1.2",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^24.8.0",
     "jest-junit": "^7.0.0",
