correctly handle and display relationships
- fix many quirks with saving relationships since move to react
- correctly generate graphql fragment for fetching all useInSummary fields

--- a/example-schema/types/MainType.yaml
+++ b/example-schema/types/MainType.yaml
@@ -22,6 +22,7 @@ properties:
     type: Word
     description: Word description.
     label: Word label
+    useInSummary: true
   someBoolean:
     type: Boolean
     description: Boolean description.
