--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "jsdom": "^15.2.1",
     "lolex": "^4.2.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.13.0",
     "nodemon": "^1.19.1",
+    "sass-loader": "^8.0.0",
     "stylelint": "^12.0.0",
     "stylelint-config-recommended-scss": "^4.1.0",
     "stylelint-scss": "^3.13.0",
