--- a/packages/tc-ui/package.json
+++ b/packages/tc-ui/package.json
@@ -8,14 +8,15 @@
 		"url": "https://github.com/Financial-Times/treecreeper.git"
 	},
 	"dependencies": {
+		"@financial-times/o-tooltip": "^4.0.1",
 		"@financial-times/tc-schema-sdk": "file:../tc-schema-sdk",
 		"autolinker": "^3.11.1",
 		"date-fns": "^2.8.1",
 		"http-errors": "^1.7.3",
 		"node-fetch": "^2.6.0",
 		"react": "^16.0.0",
-		"react-dom": "^16.0.0",
 		"react-autosuggest": "^9.4.3",
+		"react-dom": "^16.0.0",
 		"react-highlight-words": "^0.16.0",
 		"showdown": "^1.9.1"
 	},
