--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "graphql-playground-middleware-express": "^1.7.12",
     "http-errors": "^1.7.3",
     "module-alias": "^2.2.2",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
     "neo4j-driver": "^1.7.6",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
