--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,12 +124,13 @@ workflows:
           requires:
             - install
           filters: *only_version_tags
-      #Scan package.json for vulnerable dependencies while developing
-      # - ft-snyk-orb/scan-js-packages:
-      #     context: rel-eng-creds
-      #     requires:
-      #     - install
-      #     filters: *only_version_tags
+      # Scan package.json for vulnerable dependencies while developing
+      - ft-snyk-orb/scan-js-packages:
+          context: rel-eng-creds
+          requires:
+          - install
+          filters: *only_version_tags
+          workspace-path: *workspace_root
       - publish:
           context: rel-eng-creds
           requires:
@@ -141,7 +142,7 @@ workflows:
             <<: *only_version_tags
             branches:
               ignore: /.*/
-    #Scan and monitor vulnerabilities once in production
+      # Scan and monitor vulnerabilities once in production
       - ft-snyk-orb/scan-and-monitor-js-packages:
           name: snyk-scan-and-monitor
           context: rel-eng-creds
@@ -151,3 +152,4 @@ workflows:
             <<: *only_version_tags
             branches:
               ignore: /.*/
+          workspace-path: *workspace_root
