--- a/packages/tc-schema-validator/package.json
+++ b/packages/tc-schema-validator/package.json
@@ -10,6 +10,9 @@
     "graphql": "^14.5.8",
     "valid-url": "^1.0.9"
   },
+  "peerrDependencies": {
+    "jest": "*"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/Financial-Times/treecreeper.git"
