--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-plugin-module-resolver": "^3.2.0",
     "concurrently": "^5.0.0",
     "css-loader": "^3.2.1",
+    "cypress": "^3.8.2",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "fetch-mock": "^8.0.0",
