fix error messages for incomplete submission

--- a/example-schema/types/MainType.yaml
+++ b/example-schema/types/MainType.yaml
@@ -2,6 +2,10 @@ name: MainType
 description: Description of MainType.
 moreInformation: |
     More information for MainType
+minimumViableRecord:
+    - code
+    - children
+    - someString
 properties:
   code:
     type: Code
