use start-server-and-test and remove cypress orb

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,6 @@ version: 2.1
 
 orbs:
   ft-snyk-orb: financial-times/ft-snyk-orb@0
-  cypress: cypress-io/cypress@1
 
 references:
 
@@ -10,7 +9,11 @@ references:
     docker:
       # need -browsers as it bundles selenium, which bundles java, which we need
       - image: circleci/node:12.9.1-browsers
-      - image: cypress/base:10
+      - image: cypress/base:12.0.0
+        environment:
+          ## this enables colors in the output
+          TERM: xterm
+
     environment:
       NEO4J_VERSION: "3.5.0"
 
@@ -64,7 +67,32 @@ jobs:
           root: *workspace_root
           paths:
             - .
+  build:
+    <<: *default_container_config
 
+    steps:
+      - *attach_workspace
+      - restore_cache:
+          keys:
+            - *cache_key
+      - run:
+          name: Install Dependencies
+          command: npm ci
+      # run verify and then save cache.
+      # this ensures that the Cypress verified status is cached too
+      - run: npm run cy:verify
+      # save new cache folder if needed
+      - save_cache:
+          key: *cache_key
+          paths:
+            - ~/.npm
+            - ~/.cache
+      # all other test jobs will run AFTER this build job finishes
+      # to avoid reinstalling dependencies, we persist the Cypress binary to workspace
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - .cache/Cypress
   test:
     <<: *default_container_config
     steps:
@@ -93,6 +121,33 @@ jobs:
       - store_artifacts:
           path: junit
 
+  end-to-end-test:
+    <<: *default_container_config
+
+    steps:
+      - *attach_workspace
+
+      - run: sudo sh -c 'echo "127.0.0.1 local.in.ft.com" >> /etc/hosts'
+      - run:
+          name: Prepare neo4j database
+          command: |
+            java -version
+            mkdir -p neo4j
+            wget -q dist.neo4j.org/neo4j-community-$NEO4J_VERSION-unix.tar.gz
+            tar -xzf neo4j-community-$NEO4J_VERSION-unix.tar.gz -C neo4j --strip-components 1
+            sed -i "s|#dbms.security.auth_enabled=false|dbms.security.auth_enabled=false|g" neo4j/conf/neo4j.conf
+            ./scripts/neo4j-plugins
+            dbms_memory_heap_initial_size="1024m" dbms_memory_heap_max_size="1024m" neo4j/bin/neo4j start
+            ./scripts/neo4j-wait-for-start
+            make init-db
+      - run:
+          name: Run End-to-End Tests
+          command: npm run e2e:test
+      - store_artifacts:
+          path: cypress/videos
+      - store_artifacts:
+          path: cypress/screenshots
+
   verify:
     <<: *default_container_config
     steps:
@@ -119,6 +174,10 @@ workflows:
       - install:
           context: rel-eng-creds
           filters: *only_version_tags
+      - build:
+          context: rel-eng-creds
+          requires:
+            - install
       - test:
           requires:
             - install
@@ -128,20 +187,17 @@ workflows:
           requires:
             - install
           filters: *only_version_tags
-      - cypress/run:
-          yarn: true
-          cache-key: *cache_key
-          start: make env && make run-db && make run-app
-          build: make build-statics
-          wait-on: 'http://localhost:8888'
-          store_artifacts: true
+      - end-to-end-test:
+          context: rel-eng-creds
+          requires:
+            - build
           filters:
             <<: *only_version_tags
       # Scan package.json for vulnerable dependencies while developing
       - ft-snyk-orb/scan-js-packages:
           context: rel-eng-creds
           requires:
-          - install
+            - install
           filters: *only_version_tags
           workspace-path: *workspace_root
       - publish:
@@ -150,7 +206,7 @@ workflows:
             - install
             - test
             - verify
-            - cypress/run
+            - end-to-end-test
             # - ft-snyk-orb/scan-js-packages
           filters:
             <<: *only_version_tags
