--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,6 +102,9 @@ jobs:
           name: Prepare neo4j database
           command: make run-test-db
       - run:
+          name: Init db
+          command: make init-db
+      - run:
           name: Run tests
           command: make test
           environment:
@@ -122,6 +125,9 @@ jobs:
       - run:
           name: Prepare neo4j database
           command: make run-test-db
+      - run:
+          name: Init db
+          command: make init-db
       - run:
           name: Run End-to-End Tests
           command: make e2e-test
