--- a/packages/tc-ui/package.json
+++ b/packages/tc-ui/package.json
@@ -12,7 +12,7 @@
 		"autolinker": "^3.11.1",
 		"date-fns": "^2.8.1",
 		"http-errors": "^1.7.3",
-		"lodash": "^4.17.15",
+		"lodash.sortby": "^4.7.0",
 		"node-fetch": "^2.6.0",
 		"react": "^16.12.0",
 		"react-autosuggest": "^9.4.3",
