add someMultipleChoice property for testing to CuriousChild

--- a/example-schema/relationships/CuriousChild.yaml
+++ b/example-schema/relationships/CuriousChild.yaml
@@ -31,3 +31,8 @@ properties:
     label: Label for some float
     description: Description for some float.
     type: Float
+  someMultipleChoice:
+    type: AnEnum
+    hasMany: true
+    description: Multiple choice description.
+    label: Multiple choice label
