--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "treecreeper",
   "private": true,
   "version": "0.0.0",
-  "description": "A set of tools for building adnmin interfaces on top of graph data",
+  "description": "A set of tools for building admin interfaces on top of graph data",
   "main": "index.js",
   "dependencies": {
     "@financial-times/lambda-logger": "^2.0.4",
