adds ability to lock a field globally

--- a/example-schema/types/MainType.yaml
+++ b/example-schema/types/MainType.yaml
@@ -27,6 +27,8 @@ properties:
     description: Word description.
     label: Word label
     useInSummary: true
+    lockedBy:
+      - blah-bler
   # someStringList:
   #   type: Word
   #   hasMany: true
