--- a/example-schema/types/MainType.yaml
+++ b/example-schema/types/MainType.yaml
@@ -120,3 +120,13 @@ properties:
     type: CuriousParent
     description: Curious parent description.
     label: Curious parent label
+  curiousYoungerSibling:
+    type: CuriousSibling
+    description: Curious Younger sibling description.
+    label: Curious Younger sibling label
+    direction: outgoing
+  curiousOlderSibling:
+    type: CuriousSibling
+    description: Curious older sibling description.
+    label: Curious older sibling label
+    direction: incoming
