upgrade to node 12

--- a/packages/tc-api-graphql/package.json
+++ b/packages/tc-api-graphql/package.json
@@ -23,6 +23,9 @@
     "type": "git",
     "url": "https://github.com/Financial-Times/treecreeper.git"
   },
+  "engines": {
+    "node": "^12.0.0"
+  },
   "author": "",
   "license": "ISC"
 }
