--- a/packages/tc-api-s3-document-store/package.json
+++ b/packages/tc-api-s3-document-store/package.json
@@ -13,5 +13,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/Financial-Times/treecreeper.git"
+  },
+  "engines": {
+    "node": "^12.0.0"
   }
 }
