--- a/packages/tc-api-db-manager/package.json
+++ b/packages/tc-api-db-manager/package.json
@@ -14,6 +14,9 @@
     "type": "git",
     "url": "https://github.com/Financial-Times/treecreeper.git"
   },
+  "engines": {
+    "node": "^12.0.0"
+  },
   "author": "",
   "license": "ISC"
 }
