--- a/packages/tc-api-express-logger/package.json
+++ b/packages/tc-api-express-logger/package.json
@@ -11,5 +11,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/Financial-Times/treecreeper.git"
+  },
+  "engines": {
+    "node": "^12.0.0"
   }
 }
