--- a/packages/tc-markdown-parser/package.json
+++ b/packages/tc-markdown-parser/package.json
@@ -21,6 +21,9 @@
     "unist-util-select": "^3.0.0",
     "unist-util-visit-parents": "^3.0.1"
   },
+  "engines": {
+    "node": "^12.0.0"
+  },
   "author": "",
   "license": "ISC"
 }
