--- a/packages/tc-schema-validator/package.json
+++ b/packages/tc-schema-validator/package.json
@@ -16,5 +16,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/Financial-Times/treecreeper.git"
+  },
+  "engines": {
+    "node": "^12.0.0"
   }
 }
