--- a/packages/tc-markdown-parser/package.json
+++ b/packages/tc-markdown-parser/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@financial-times/tc-markdown-parser",
   "version": "0.0.0",
-  "description": "parse makrdown files and extract treecreeper records",
+  "description": "parse markdown files and extract treecreeper records",
   "main": "index.js",
   "directories": {
     "lib": "lib",
