--- a/example-schema/types/MainType.yaml
+++ b/example-schema/types/MainType.yaml
@@ -140,3 +140,7 @@ properties:
     description: Curious older sibling description.
     label: Curious older sibling label
     direction: incoming
+  oddThings:
+    type: OddThing
+    description: Odd thing relationship description
+    label: Odd thing relationship label
