check valid property is used as idField

--- a/example-schema/types/MainType.yaml
+++ b/example-schema/types/MainType.yaml
@@ -23,6 +23,7 @@ properties:
     description: Word description.
     label: Word label
     useInSummary: true
+    canIdentify: true
   # someStringList:
   #   type: Word
   #   hasMany: true
