Updated to create index on fields with canIdentify property as currently indexes are only created on unique prop are indexed to create correct number of indexes

--- a/example-schema/types/MainType.yaml
+++ b/example-schema/types/MainType.yaml
@@ -69,6 +69,7 @@ properties:
     type: Url
     description: Url description.
     label: Url label
+    canIdentify: true
   children:
     relationship: HAS_CHILD
     type: ChildType
