--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "concurrently": "^5.0.0",
     "css-loader": "^3.2.1",
     "cypress": "^3.8.2",
-    "fetch-mock": "^9.6.0-alpha.2",
+    "fetch-mock": "^9.9.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^24.8.0",
     "jest-junit": "^7.0.0",
