created fieldset component which displays header, description and props within fieldset

--- a/example-schema/types/FieldsetType.yaml
+++ b/example-schema/types/FieldsetType.yaml
@@ -27,7 +27,7 @@ properties:
 
 fieldsets:
   fieldsetA:
-    heading: I am a fieldset
+    heading: Fieldset A
   fieldsetB:
     heading: Fieldset B
     description: I have a lovely description.
