--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@financial-times/tc-schema-publisher": "file:./packages/tc-schema-publisher",
     "@financial-times/tc-schema-sdk": "file:packages/tc-schema-sdk",
     "@financial-times/tc-ui": "file:packages/tc-ui",
+    "ascii-table": "0.0.9",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "graphql-playground-middleware-express": "^1.7.14",
