json schema for enums and types more or less done

--- a/packages/tc-schema-validator/package.json
+++ b/packages/tc-schema-validator/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@financial-times/tc-schema-sdk": "file:../tc-schema-sdk",
     "graphql": "^14.5.8",
+    "ajv": "^7.0.1",
     "valid-url": "^1.0.9"
   },
   "peerDependencies": {
