--- a/packages/tc-schema-validator/package.json
+++ b/packages/tc-schema-validator/package.json
@@ -12,12 +12,12 @@
     "ajv-errors": "^2.0.0",
     "valid-url": "^1.0.9"
   },
-  "peerDependencies": {
-    "jest": "*"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/Financial-Times/treecreeper.git"
+  },
+  "bin": {
+    "tc-schema-validator": "validation/index.js"
   },
   "engines": {
     "node": "^12.0.0"
