--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@financial-times/tc-ui": "file:packages/tc-ui",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "graphql": "^14.0.0",
     "graphql-playground-middleware-express": "^1.7.14",
     "http-errors": "^1.7.3",
     "lodash": "^4.17.18",
