--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,10 @@ services:
   neo4j:
     image: neo4j:4.1.5
     environment:
+#      - NEO4J_dbms_ssl_policy_bolt_enabled=true
+#      - NEO4J_dbms_ssl_policy_bolt_base__directory=/certificates-hide
+#      - NEO4J_dbms_ssl_policy_bolt_private__key=private.key
+#      - NEO4J_dbms_ssl_policy_bolt_public__certificate=public.crt
       - NEO4J_dbms_logs_query_enabled=VERBOSE
       - NEO4J_AUTH=none
       - NEO4J_ACCEPT_LICENSE_AGREEMENT=yes
@@ -15,3 +19,4 @@ services:
       - ./neo4j/data:/data
       - ./neo4j/plugins:/plugins
       - ./neo4j/logs:/logs
+#      - ./certificates-hide:/certificates-hide
