--- a/packages/tc-ui/package.json
+++ b/packages/tc-ui/package.json
@@ -13,6 +13,7 @@
 		"date-fns": "^2.8.1",
 		"http-errors": "^1.7.3",
 		"lodash.sortby": "^4.7.0",
+		"marked": "^2.0.0",
 		"node-fetch": "^2.6.0",
 		"react": "^16.13.0",
 		"react-autosuggest": "^10.0.2",
