simplified post tests significantly

--- a/example-schema/type-hierarchy.yaml
+++ b/example-schema/type-hierarchy.yaml
@@ -10,7 +10,7 @@ test:
     - MVRType
     - FieldsetType
     - ValidatedType
-    - AllPrimitives
+    - KitchenSink
     - SimpleGraphBranch
     - SimpleGraphLeaf
     - DocumentStoreTest
