--- a/example-schema/relationships/FallenLeaf.yaml
+++ b/example-schema/relationships/FallenLeaf.yaml
@@ -11,3 +11,16 @@ properties:
     label: timeOfDeparture label
     description: timeOfDeparture description.
     type: DateTime
+  stringProperty:
+    type: Word
+    description: stringProperty description.
+    label: stringProperty label
+  booleanProperty:
+    type: Boolean
+    description: booleanProperty description.
+    label: booleanProperty label
+  multipleChoiceEnumProperty:
+    type: AnEnum
+    hasMany: true
+    description: multipleChoiceEnumProperty description.
+    label: multipleChoiceEnumProperty label
