--- a/example-schema/types/SimpleGraphBranch.yaml
+++ b/example-schema/types/SimpleGraphBranch.yaml
@@ -1,4 +1,5 @@
 name: SimpleGraphBranch
+pluralName: SimpleGraphBranches
 description: A type that has a few primitive properties and relationships on it, for general testing
 properties:
   code:
@@ -16,6 +17,10 @@ properties:
     type: Boolean
     description: booleanProperty description.
     label: booleanProperty label
+  documentProperty:
+    type: Document
+    description: documentProperty description.
+    label: documentProperty label
   leaves:
     type: SimpleGraphLeaf
     label: leaves label
