--- a/example-schema/types/KitchenSink.yaml
+++ b/example-schema/types/KitchenSink.yaml
@@ -10,58 +10,67 @@ properties:
     description: Code description.
     label: Code label
     pattern: CODE
-  firstStringProperty:
-    type: Word
-    description: firstStringProperty description.
-    label: firstStringProperty label
-    useInSummary: true
-  secondStringProperty:
-    type: Word
-    description: secondStringProperty description.
-    label: secondStringProperty label
-  firstDocumentProperty:
-    type: Document
-    description: firstDocumentProperty description.
-    label: firstDocumentProperty label
-  secondDocumentProperty:
-    type: Document
-    description: secondDocumentProperty description.
-    label: secondDocumentProperty label
+  # firstStringProperty:
+  #   type: Word
+  #   description: firstStringProperty description.
+  #   label: firstStringProperty label
+  #   useInSummary: true
+  # secondStringProperty:
+  #   type: Word
+  #   useInSummary: true
+  #   description: secondStringProperty description.
+  #   label: secondStringProperty label
+  # firstDocumentProperty:
+  #   type: Document
+  #   description: firstDocumentProperty description.
+  #   label: firstDocumentProperty label
+  # secondDocumentProperty:
+  #   type: Document
+  #   description: secondDocumentProperty description.
+  #   label: secondDocumentProperty label
   booleanProperty:
     type: Boolean
+    useInSummary: true
     description: booleanProperty description.
     label: booleanProperty label
   enumProperty:
     type: AnEnum
+    useInSummary: true
     description: enumProperty description.
     label: enumProperty label
-  multipleChoiceEnumProperty:
-    type: AnEnum
-    hasMany: true
-    description: multipleChoiceEnumProperty description.
-    label: multipleChoiceEnumProperty label
-  integerProperty:
-    type: Int
-    description: integerProperty description.
-    label: integerProperty label
-  floatProperty:
-    type: Float
-    description: floatProperty description.
-    label: floatProperty label
-  dateProperty:
-    type: Date
-    description: Date description.
-    label: Date label
-  timeProperty:
-    type: Time
-    description: Time description.
-    label: Time label
-  datetimeProperty:
-    type: DateTime
-    description: DateTime description.
-    label: DateTime label
-  urlProperty:
-    type: Url
-    description: Url description.
-    label: Url label
-    canIdentify: true
+  # multipleChoiceEnumProperty:
+  #   type: AnEnum
+  #   useInSummary: true
+  #   hasMany: true
+  #   description: multipleChoiceEnumProperty description.
+  #   label: multipleChoiceEnumProperty label
+  # integerProperty:
+  #   type: Int
+  #   useInSummary: true
+  #   description: integerProperty description.
+  #   label: integerProperty label
+  # floatProperty:
+  #   type: Float
+  #   useInSummary: true
+  #   description: floatProperty description.
+  #   label: floatProperty label
+  # dateProperty:
+  #   type: Date
+  #   useInSummary: true
+  #   description: Date description.
+  #   label: Date label
+  # timeProperty:
+  #   type: Time
+  #   description: Time description.
+  #   label: Time label
+  # datetimeProperty:
+  #   type: DateTime
+  #   useInSummary: true
+  #   description: DateTime description.
+  #   label: DateTime label
+  # urlProperty:
+  #   type: Url
+  #   useInSummary: true
+  #   description: Url description.
+  #   label: Url label
+  #   canIdentify: true
